--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
                     leap into electronic typesetting, remaining essentially unchanged. </p>
                 <div class="content-button">
-                    <button>Start</button>
+                    <a class="button" href="lab14.html">Lab14</a>
                 </div>
             </div>
         </div>
